# jluna-docker

./: Dockerfile  README.md  docker-compose.yaml
array/: CMakeLists.txt  main.cpp  myModule.jl
doubleIt/: CMakeLists.txt  main.cpp  myModule.jl
hello/: CMakeLists.txt  hello.cpp  hello.jl
libDoubleIt/: CMakeLists.txt  doubleIt.pc.in  doubleItConfig.cmake
libDoubleIt/examples/: main.cpp
libDoubleIt/include/: double_it.hpp  double_it_impl.hpp
libDoubleIt/julia/: myModule.jl
libDoubleIt/src/: double_it.cpp
useDoubleIt/: CMakeLists.txt  main.cpp
